--- a/views/index.haml
+++ b/views/index.haml
@@ -1,2 +1,13 @@
-%h1 Use Card
+%h1 Benvenuto!
 
+%p
+  TenCard e' la carta che ti permette di ottenere uno sconto del 10% su tutti i prodotti dei
+  - link_to "negozi convenzionati", "/shops"
+  !
+
+
+Effettua il
+- link_to "login", "/login"
+per accedere al servizio, se non hai ancora una carta,
+- link_to "registrati", "/register"
+gratuitamente!
