--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,9 @@ ul {
 .clear {
   clear: both; }
 
+.right {
+  float: right; }
+
 html, body {
   height: 100%; }
 
@@ -34,6 +37,8 @@ a:hover {
 .content {
   width: 85%;
   margin: 20px auto 30px; }
+  .content h1 {
+    margin: 0 0 10px 0; }
 
 header {
   width: 85%;
@@ -64,13 +69,29 @@ nav {
     color: white;
     background: #ff5533; }
 
+table {
+  border: 1px solid #666666; }
+  table td, table th {
+    padding: 1px 12px; }
+  table th {
+    text-align: left;
+    background: #cccccc;
+    border-bottom: 1px solid #666666; }
+  table td {
+    background: #dddddd; }
+  table tr:nth-child(2n-1) td {
+    background: #eeeeee; }
+
 .status {
   float: right;
   margin: 4px 0 0; }
+  .status .welcome {
+    float: right;
+    margin: 4px 5px 0 0; }
   .status span {
     font-size: 0.85em; }
   .status form {
-    display: inline-block;
+    float: right;
     font-size: 0.8em; }
 
 label {
@@ -94,3 +115,15 @@ textarea {
 
 .submit {
   clear: right; }
+
+.user h1 {
+  display: inline-block; }
+.user p span {
+  font-weight: bold;
+  font-size: 0.85em; }
+
+.subnav {
+  display: inline-block;
+  margin: 6px 0 0 20px; }
+  .subnav a {
+    font-size: 0.8em; }
