--- a/views/_user.haml
+++ b/views/_user.haml
@@ -1,4 +1,5 @@
 %tr
-  %td= user.username
-  %td #{user.card_code}
   %td
+    - link_to user.username, "/users/#{user.id}"
+  %td #{user.name}
+  %td #{user.card_code}
